@startuml


class PlaylistsListView{
-final String CSS_FILE
-final String FXML_FILE
-static PlaylistManager manager
~Label favoritesLabel
~Label playingLabel
~ListView<SavedPlaylist> playlistsView
+ PlaylistsListView()
+void refresh()
-void loadFavoritesPlaylist(MouseEvent e)
-void loadFavoritesPlaylist(MouseEvent e)
}


class UIController{
-final Logger LOG
-IPlaylist currentPlaylist
-String FXML_FILE
-PlaylistsListView playlistsListView
-TracksListView tracksListView
+UIController getController()
+void showPlaylist(IPlaylist playlist)
+void refreshPlaylist()
+void refreshPlaylistsList()
+IPlaylist getCurrentPlaylist()
+void showAlert(String title, String message, Alert.AlertType type)
...()
}

class TracksListView{
- static Logger LOG
- static PlaylistManager playlistManager


+ TracksListView()
+void showPlaylist(IPlaylist playlist)
+void initializeDragAndDrop()
}
 TracksListView <-- UIController
 PlaylistsListView <-- UIController

@enduml
